# ai-driven-network-remediation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/inspect-ns/: action.yaml
.github/actions/kind/: action.yaml
.github/workflows/: build-and-push-manual.yaml  build-and-push.yaml  pr-checks.yml  pr-unit-tests.yml
docs/: autorag.md  chatbot-bff.md  langfuse-deploy.md  manual-deploy.md  v2.1-servicenow-integration.md
docs/rest/: rest-commands.md
hub/agent-service/: Containerfile  README.md  pyproject.toml
hub/agent-service/src/agent_service/: __init__.py  app.py  config.py  graph.py  server.py  state.py  utils.py  workflow.py
hub/agent-service/src/agent_service/clients/: __init__.py  llamastack.py
hub/agent-service/src/agent_service/kafka/: __init__.py  consumer.py
hub/agent-service/src/agent_service/nodes/: __init__.py  analyze.py  audit.py  escalate.py  notify.py  rag_retrieval.py  remediate.py  servicenow_close.py
hub/agent-service/tests/: helpers.py  test_analyze.py  test_audit.py  test_escalate.py  test_graph.py  test_kafka_consumer.py  test_notify.py  test_rag_retrieval.py  test_server.py  test_servicenow_close.py  test_utils.py
hub/chatbot-service/: Containerfile  pyproject.toml
hub/chatbot-service/src/chatbot_service/: __init__.py  chat.py  config.py
hub/chatbot-service/tests/: test_endpoints.py
hub/frontend/: Containerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
hub/frontend/src/: App.jsx  styles.css
hub/frontend/src/components/: BusinessImpact.jsx  ChatPanel.jsx  DemoTrigger.jsx  HeaderMetrics.jsx  IncidentTimeline.jsx  IntegrationMatrix.jsx  SloPanel.jsx  StatusCards.jsx
hub/frontend/src/hooks/: usePolling.js
hub/helm/: Chart.yaml  values.yaml
hub/helm/charts/autorag/: Chart.yaml  values.yaml
hub/helm/charts/kafka/: Chart.yaml  README.md
hub/helm/charts/kafka/templates/: _helpers.tpl  (+3 more)
hub/helm/charts/lokistack/: .helmignore  Chart.yaml
hub/helm/charts/milvus/: Chart.yaml  values.yaml
hub/helm/charts/minio/: values.yaml
hub/helm/templates/: _helpers.tpl  aap-mock.yaml  agent-service.yaml  chatbot-service.yaml  edge-rbac-job.yaml  edge-rbac-sa.yaml  ingestion-pipeline.yaml  kafka.yaml  servicenow-mock.yaml
hub/infra/autorag/: values.yaml
hub/infra/autorag/templates/: llama-stack-secret.yaml  ogx-config.yaml  ogxserver.yaml
hub/infra/langfuse/: create-secrets.sh  values.yaml
hub/infra/servicenow-mock/: pyproject.toml
hub/ingestion-pipeline/: Containerfile  pyproject.toml
hub/ingestion-pipeline/src/ingestion_pipeline/: __init__.py  app.py  config.py  documents.py  service.py
hub/ingestion-pipeline/tests/: test_auto_ingest.py  test_documents.py
hub/integration-tests/: pyproject.toml
hub/integration-tests/tests/: common_helpers.py  conftest.py
hub/mcp-servers/: Containerfile
hub/mcp-servers/mcp-kafka/: pyproject.toml
hub/mcp-servers/mcp-kafka/src/mcp_kafka/: __init__.py
hub/mcp-servers/mcp-lokistack/: pyproject.toml
hub/mcp-servers/mcp-openshift/: pyproject.toml
hub/mcp-servers/mcp-openshift/src/mcp_openshift/: __init__.py
hub/mcp-servers/mcp-servicenow/: README.md  pyproject.toml
hub/mcp-servers/mcp-slack/: pyproject.toml
hub/mcp-servers/mcp-slack/src/mcp_slack/: __init__.py
hub/telco-oran/: README.md  pyproject.toml
hub/telco-oran/src/telco_oran/domain/: anomaly.py  anomaly_detector.py  cell.py  cell_band_metrics.py  ran_kpi_record.py  ran_kpi_record_factory.py
hub/telco-oran/src/telco_oran/generation/: simulation_factory.py
hub/telco-oran/tests/: test_anomaly_detection.py  test_ran_kpi_record_factory.py  test_simulation_factory.py
mlops/dataset-pipeline/: pyproject.toml
mlops/training-pipeline/: pyproject.toml
mlops/training-pipeline/src/training_pipeline/: __init__.py
scripts/ci/: kind-with-registry.sh
scripts/local/: deploy-with-custom-image.sh  dispose-installation.sh
scripts/postman/: servicenow-pdi.postman_environment.json  servicenow-table-api.postman_collection.json
(+39 files in other folders)
