[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=1.2.0",
    "llama-stack-client==0.6.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
agent-service = "agent_service:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
