[project]
name = "chatbot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
chatbot-service = "chatbot_service:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
