[project]
name = "servicenow-mock"
version = "0.1.0"
description = "Mock ServiceNow REST API for CI integration tests"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.34",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["."]
filterwarnings = [
    "ignore:Using.*httpx.*starlette",
]
