[project]
name = "mcp-kafka"
version = "0.1.0"
description = "MCP server for Kafka operations for the AI remediation agent"
readme = "README.md"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.23",
    "kafka-python-ng>=2.2",
    "uvicorn>=0.34",
]

[project.scripts]
mcp-kafka = "mcp_kafka:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
