[project]
name = "mcp-slack"
version = "0.1.0"
description = "MCP server wrapping Slack Bot API for NOC alerts and remediation notifications"
readme = { text = "", content-type = "text/markdown" }
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.23",
    "httpx>=0.28",
    "uvicorn>=0.34",
]

[project.scripts]
mcp-slack = "mcp_slack:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
